feat: Update project configuration and documentation
- Updated LICENSE file with copyright information.
- Enhanced README.md with detailed project structure, prerequisites, and execution guide.
- Specified main class in pom.xml for Spring Boot application.
- Removed unused DemoApplication class.
- Adjusted application.properties for clarity on user details.
- Added ApplicationTests class for context loading verification.